<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TextoOriginalActivity"
    tools:showIn="@layout/activity_texto_original">


    <LinearLayout
        android:id="@+id/layout_texto_original"
        android:layout_width="match_parent"
        android:layout_height="@+id/horizontalScrollView_botones_original"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView_botones_original"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView_original"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/texto_original"
            android:textSize="23sp"
            android:textColor="@color/letras"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="?android:attr/listDivider" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical"
            android:fadeScrollbars="false">

            <LinearLayout
                android:id="@+id/layout_original_scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_resultado_original"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@color/letras"
                    android:textSize="23sp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView_botones_original"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:id="@+id/linearLayour_botones_original"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/frameLayout_original"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" >

                <ImageView
                    android:id="@+id/imageView_audio_original"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_above="@+id/button_resumen_original"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginBottom="15dp"
                    android:contentDescription="@string/boton_audio_original"
                    app:srcCompat="@drawable/audio" />

                <Button
                    android:id="@+id/button_frases_original"
                    android:layout_width="155dp"
                    android:layout_height="55dp"
                    android:layout_above="@+id/button_palabras_original"
                    android:layout_marginStart="75dp"
                    android:layout_marginBottom="15dp"
                    android:layout_toEndOf="@+id/imageView_audio_original"
                    android:background="@drawable/boton_pulsado"
                    android:text="@string/boton_palabras_original"
                    android:textSize="23sp" />

                <Button
                    android:id="@+id/button_resumen_original"
                    android:layout_width="155dp"
                    android:layout_height="55dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/boton_pulsado"
                    android:text="@string/boton_resumen_original"
                    android:textSize="23sp" />

                <Button
                    android:id="@+id/button_palabras_original"
                    android:layout_width="155dp"
                    android:layout_height="55dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="15dp"
                    android:layout_toEndOf="@+id/button_resumen_original"
                    android:background="@drawable/boton_pulsado"
                    android:text="@string/boton_frases_original"
                    android:textSize="23sp" />

            </RelativeLayout>

        </LinearLayout>
    </HorizontalScrollView>

</android.support.constraint.ConstraintLayout>