<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".frases.FrasesActivity"
    tools:showIn="@layout/activity_frases">

    <LinearLayout
        android:id="@+id/layout_frases"
        android:layout_width="match_parent"
        android:layout_height="@+id/frameLayout_frases"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout_frases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/textView_frases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/texto_frases"
            android:textSize="23sp"
            android:textColor="@color/letras"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="?android:attr/listDivider" />

        <ListView
            android:id="@+id/listView_frases"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:drawSelectorOnTop="false"
            android:dividerHeight="2dp"
            android:divider="#80BEBEBE"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:visibility="visible" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/frameLayout_frases"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/button_pictogramas_frases"
            android:layout_width="155dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/boton_pulsado"
            android:text="@string/boton_pictogramas_frases"
            android:textSize="23sp" />

        <Button
            android:id="@+id/button_palabra_frases"
            android:layout_width="155dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/boton_pulsado"
            android:text="@string/boton_palabra_frases"
            android:textSize="23sp" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>